deployments/arr/lidarr/services.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: lidarr-service
  namespace: media
spec:
  type: ClusterIP
  ports:
    - port: 8686
      targetPort: lidarr
  selector:
    app: lidarr
    part-of: lidarr
