deployments/arr/lidarr/ingress.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: lidarr-ingress
  namespace: media
  annotations: 
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`www.lidarr.local.tigovanroy.space`)
      kind: Rule
      services:
        - name: lidarr-service
          port: 8686
    - match: Host(`lidarr.local.tigovanroy.space`)
      kind: Rule
      services:
        - name: lidarr-service
          port: 8686
      middlewares:
        - name: media-headers
  tls:
    secretName: local-tigovanroy-space-production-tls
